finish coding